# letterboxd-watchlist

./: .env.example  .gitignore  dashboard.html  manifest.json  pyproject.toml
.github/workflows/: check-for-new-log.yml  daily.yml
config/: dismissed_recommendations.yaml  favorites.yaml  revisitable_services.yaml  services.yaml
launchd/: com.joshmackwell.letterboxd-dashboard-sync.plist  com.joshmackwell.letterboxd-watchlist.plist
scripts/: install_dashboard_sync_launchd.sh  install_launchd.sh  run.sh  sync_dashboard_to_icloud.sh
src/watchlist_justwatch/: analysis.py  availability.py  brands.py  config.py  countries.py  dashboard.py  db.py  diff.py  html_email.py  justwatch_client.py  letterboxd.py  main.py  models.py  notify.py  report.py  similar.py  state.py  tmdb_client.py
